--- a/Week3/HWW3/style.css
+++ b/Week3/HWW3/style.css
@@ -58,9 +58,9 @@ nav a {
   text-decoration: none;
   font-size: 19.2px;
 }
-/* .topnav {
+.topnav {
   display: none;
-} */
+}
 
 .item-left {
   margin-left: 10px;
@@ -333,14 +333,13 @@ section .main-contenct {
     flex-direction: column;
   }
 
-  /* Style the navigation menu */
   .topnav {
     overflow: hidden;
     background-color: #01689b;
     position: relative;
+    display: block;
   }
 
-  /* Hide the links inside the navigation menu (except for logo/home) */
   .topnav #myLinks {
     display: inline-block;
     margin: 0 20px;
@@ -352,7 +351,6 @@ section .main-contenct {
     border-top: 1px solid #fff;
     border-bottom: 1px solid #fff;
   }
-  /* Style navigation menu links */
   .topnav a {
     color: white;
     padding: 14px 16px;
@@ -364,7 +362,6 @@ section .main-contenct {
     background-color: #01689b;
   }
 
-  /* Style the hamburger menu */
   .icon {
     color: #fff;
     background: #01689b;
@@ -374,11 +371,6 @@ section .main-contenct {
     right: 0;
     top: -400px;
   }
-
-  /* .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  } */
 }
 
 @media screen and (min-width: 765px) and (max-width: 1024px) {
